--- a/launch.html
+++ b/launch.html
@@ -27,7 +27,8 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': 'd954775d-ecee-42ce-9359-f0fce19b8f21',
-        'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
+        'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile',
+        "state": "1234"
       });
     </script>
     <div class="spinner">
