--- a/launch-smart-sandbox.html
+++ b/launch-smart-sandbox.html
@@ -30,7 +30,8 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': 'YOUR-SMART-HEALTH-IT-CLIENT-ID-HERE',
-        'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
+        'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile',
+        "state": "34"
       });
     </script>
     <div class="spinner">
