--- a/launch.html
+++ b/launch.html
@@ -28,7 +28,7 @@
       FHIR.oauth2.authorize({
         'client_id': 'd954775d-ecee-42ce-9359-f0fce19b8f21',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile',
-        "state": "CO"
+        "state": "NY"
       });
     </script>
     <div class="spinner">
