--- a/launch.html
+++ b/launch.html
@@ -19,7 +19,7 @@
     -->
 
     <!-- FHIR Client JS Library -->
-    <script src='./lib/js/fhir-client-v0.1.12.js'></script>
+    <script src="https://cdn.jsdelivr.net/npm/fhirclient/build/fhir-client.js"></script>
 
     <!-- Prevent session bleed caused by single threaded embedded browser and sessionStorage API -->
     <!-- https://github.com/cerner/fhir-client-cerner-additions -->
@@ -28,11 +28,11 @@
       FHIR.oauth2.authorize({
         'client_id': 'd954775d-ecee-42ce-9359-f0fce19b8f21',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile',
-        'response_type' : 'code',
-        'redirect_uri' : 'https://ui.com',
-        'launch' : 'xyz123',
-        'state' : '98wrghuwuogerg97',
-        'aud': 'https://ehr/fhir'
+        // 'response_type' : 'code',
+        // 'redirect_uri' : 'https://ui.com',
+        // 'launch' : 'xyz123',
+        // 'state' : '98wrghuwuogerg97',
+        // 'aud': 'https://ehr/fhir'
       });
 
             
