--- a/launch-patient.html
+++ b/launch-patient.html
@@ -28,7 +28,8 @@
       FHIR.oauth2.authorize({
         'client_id': 'd954775d-ecee-42ce-9359-f0fce19b8f21',
         'scope':  'patient/Patient.read patient/Observation.read launch/patient online_access openid profile',
-        'iss' : 'https://krishna-mindfire.github.io/cernersmatapp/'
+        'iss' : 'https://krishna-mindfire.github.io/cernersmatapp/',
+        'patientId': '12724067'
       });
     </script>
     <div class="spinner">
