--- a/launch-smart-sandbox.html
+++ b/launch-smart-sandbox.html
@@ -31,7 +31,8 @@
       FHIR.oauth2.authorize({
         'client_id': 'YOUR-SMART-HEALTH-IT-CLIENT-ID-HERE',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile',
-        'iss' : 'https://krishna-mindfire.github.io/cernersmatapp/'
+        'iss' : 'https://krishna-mindfire.github.io/cernersmatapp/',
+        'patientId': '12724067'
       });
     </script>
     <div class="spinner">
