--- a/launch.html
+++ b/launch.html
@@ -28,12 +28,14 @@
       FHIR.oauth2.authorize({
         'client_id': 'd954775d-ecee-42ce-9359-f0fce19b8f21',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile',
-        'iss' : 'https://krishna-mindfire.github.io/cernersmatapp/'
+        'iss' : 'https://krishna-mindfire.github.io/cernersmatapp/',
+        'patientId': '12724067'
         // 'response_type' : 'code',
         // 'redirect_uri' : 'https://ui.com',
         // 'launch' : 'xyz123',
         // 'state' : '98wrghuwuogerg97',
         // 'aud': 'https://ehr/fhir'
+       // https://r2.smarthealthit.org&patientId=smart-1482713
       });
 
             
