--- a/launch.html
+++ b/launch.html
@@ -28,7 +28,7 @@
       FHIR.oauth2.authorize({
         'client_id': 'd954775d-ecee-42ce-9359-f0fce19b8f21',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile',
-        'iss' : 'https://krishna-mindfire.github.io/cernersmatapp/',
+        'iss' : 'https://launch.smarthealthit.org/v/r4/fhir/',
         'patientId': '12724067'
         // 'response_type' : 'code',
         // 'redirect_uri' : 'https://ui.com',
