--- a/index.html
+++ b/index.html
@@ -73,8 +73,6 @@
       <script src='./lib/js/cerner-smart-embeddable-lib-1.0.0.min.js'></script>
     -->
 
-    <!-- Application-level javascript-->
-    <script src='./src/js/example-smart-app.js'></script>
 
     <!-- FHIR Client JS Library -->
     <!-- <script src='./lib/js/fhir-client-v0.1.12.js'></script> -->
@@ -83,7 +81,11 @@
     <!-- https://github.com/cerner/fhir-client-cerner-additions -->
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    <!-- Application-level javascript-->
+    <script src='./src/js/example-smart-app.js'></script>
     <script>
+      //console.log('i am here index');
       extractData().then(
         //Display Patient Demographics and Observations if extractData was success
         function(p) {
