--- a/launch.html
+++ b/launch.html
@@ -29,8 +29,8 @@
       FHIR.oauth2.authorize({
         'client_id': 'd954775d-ecee-42ce-9359-f0fce19b8f21',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile',
-        'iss' : 'https://launch.smarthealthit.org/v/r2/sim/eyJrIjoiMSIsImoiOiIxIn0/fhir',
-        //.'patientId': '5c41cecf-cf81-434f-9da7-e24e5a99dbc2'
+        'fhirServiceUrl' : 'https://r2.smarthealthit.org',
+        //.'patientId': ' '
         // 'response_type' : 'code',
         // 'redirect_uri' : 'https://ui.com', 
         // 'launch' : 'xyz123',
