--- a/launch.html
+++ b/launch.html
@@ -29,7 +29,7 @@
       FHIR.oauth2.authorize({
         'client_id': 'd954775d-ecee-42ce-9359-f0fce19b8f21',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile',
-        'fhirServiceUrl' : 'https://r2.smarthealthit.org',
+        'iss' : 'https://launch.smarthealthit.org/v/r2/sim/eyJrIjoiMSIsImoiOiIxIn0/fhir',
         //.'patientId': ' '
         // 'response_type' : 'code',
         // 'redirect_uri' : 'https://ui.com', 
