--- a/launch.html
+++ b/launch.html
@@ -19,8 +19,8 @@
     -->
 
     <!-- FHIR Client JS Library -->
-    <script src='./lib/js/fhir-client-v0.1.12.js'></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/fhirclient/build/fhir-client.js"></script> -->
+    <!-- <script src='./lib/js/fhir-client-v0.1.12.js'></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/fhirclient/build/fhir-client.js"></script>
 
     <!-- Prevent session bleed caused by single threaded embedded browser and sessionStorage API -->
     <!-- https://github.com/cerner/fhir-client-cerner-additions -->
@@ -30,7 +30,7 @@
         'client_id': 'd954775d-ecee-42ce-9359-f0fce19b8f21',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile',
         'iss' : 'https://launch.smarthealthit.org/v/r2/sim/eyJrIjoiMSIsImoiOiIxIn0/fhir',
-        //.'patientId': ' '
+        //.'patientId': '5c41cecf-cf81-434f-9da7-e24e5a99dbc2'
         // 'response_type' : 'code',
         // 'redirect_uri' : 'https://ui.com', 
         // 'launch' : 'xyz123',
